--- a/ressources/scss/base/_general.scss
+++ b/ressources/scss/base/_general.scss
@@ -6,8 +6,15 @@ body {
   background-repeat: repeat;
   background-blend-mode: luminosity;
 }
+
 main {
-  margin: -12rem auto 0 auto;
+  margin: -6rem auto 0 auto;
+}
+
+@media (min-width: 600px) {
+  main {
+    margin: -12rem auto 0 auto;
+  }
 }
 
 .accroche {
