--- a/ressources/scss/layout/_leProgramme.scss
+++ b/ressources/scss/layout/_leProgramme.scss
@@ -70,6 +70,8 @@
   align-items: center;
   width: 90%;
   margin: auto;
+  overflow: hidden;
+  padding-top: 1rem;
 }
 // *** Diagramme des axes *** //
 .pieChart {
@@ -81,7 +83,6 @@
   background-color: rgba(255, 250, 241, 0.4);
   box-shadow: 4px 4px 8px rgb(0 0 0 / 0.4);
   rotate: 12deg;
-  overflow: hidden;
 }
 .pieSlice {
   height: 100%;
